# task_manageer

./: .flake8  .gitignore  .gitlab-ci.yaml  Dockerfile  Makefile  README.md  __main__.py  docker-compose.yaml  main.py  models.sql  pyproject.toml  quick_test.py  rels.ipynb  settings.py  setup.cfg  task_mngr_db_dump.sql
alembic/: env.py
alembic/versions/: 2023_10_26_1529-fea7b981728d_create_user_project_task_and_task_.py  2023_10_26_1612-1aae2ede1b99_add_default_values.py  2023_10_26_1900-5998ab48f00c_edit_user_model.py  2023_10_26_2002-14dd20d035ce_create_user_profile_table.py  2023_10_27_1310-89f8c5938bd8_edit_server_default_for_tasks_table.py  2023_10_30_1504-bceb2c1569cc_replace_uuid_generation_method.py  2023_10_31_1416-9bc9d95752ea_change_models_with_creator.py  2023_11_01_1523-ece1f63fa0d9_add_asseciate_tables_for_many_to_many.py  2023_11_03_2001-fdb7104615d8_create_associate_projects_teams_table.py  2023_11_03_2310-cab4ed2bc27c_create_associate_users_teams_table.py  2023_11_05_2120-66eeb9b9d4ff_add_profile_image.py  2023_11_07_2316-6ea9f766f742_remove_profileimages_add_description_to_.py  2023_11_07_2343-083473de6de2_add_user_id_in_profiles.py  2023_11_08_1523-94d0d83db26e_rename_usersprofile_to_profiles_alter_.py  2023_11_08_1732-9683d41d0736_remove_profile_table.py  2023_11_09_1609-02e8d210f1c3_update_fk_in_projects.py  2023_11_09_1614-039457afd4b0_update_fk_in_associate_tables.py  2023_11_10_1918-349077407852_add_position_field_for_user.py  2023_11_10_1929-f42eb75854f5_rename_project_name_to_title.py  2023_11_21_2301-d03f2e16c560_add_chat_models.py  2023_11_22_1650-db4c7d173a90_add_dialogs_table.py  2023_11_23_0919-24e662c57be5_edit_dialog_table.py  2023_11_29_1940-58ae23e83ba7_updte_fk_with_cacsade.py  2023_12_15_1959-8b92b33d53bd_initial.py
api_v1/: __init__.py
api_v1/projects/: crud.py  schemas.py  views.py
api_v1/tasks/: crud.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: PostForm.vue  PostItem.vue  PostList.vue
quick_tests/: creators.py  getters.py
src/: __init__.py
src/api_v1/: __init__.py
src/api_v1/associates/: models.py  schemas.py
src/api_v1/auth/: schemas.py  service.py  views.py
src/api_v1/base/: exceptions.py  model_mixins.py  models.py  schemas.py  (+1 more)
src/core/: config.py
src/front/: __init__.py
src/tests/: conftest.py
src/utils/: admin.py  auth.py  database.py  email.py  exceptions.py  websocket.py
tests/integration/: conftest.py  resources.py  test_chat.py  test_projects.py  test_tasks.py  test_teams.py  test_users.py
(+75 files in other folders)
