[tool.poetry]
name = "task-manageer"
version = "0.1.0"
description = "Task Manageer"
authors = ["Artem <vebulogmetra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
python-dotenv = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120
force_grid_wrap = 2
