[tool.poetry]
name = "task-manageer"
version = "0.1.0"
description = "Task Manageer"
authors = ["Artem <vebulogmetra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120
force_grid_wrap = 2
