[tool.poetry]
name = "task-manageer"
version = "0.1.0"
description = "Task Manageer"
authors = ["Artem <vebulogmetra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
flake8 = "^6.1.0"
pexpect = "^4.8.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"
pytest-postgresql = "^5.0.0"
httpx = "^0.25.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
mypy = "^1.6.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 90
force_grid_wrap = 2

[tool.black]
line-length = 90
target-version = ['py310']

[tool.flake8]
exclude = [".git", ".pytest_cache", "tests", "__pycache__", "env", "venv", ".venv"]
max-line-length = 90
max-complexity = 4
ignore = ["W503"]

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
pythonpath = ["."]
asyncio_mode = "auto"
